# income_app

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
