[package]
name = "income-app"
version = "0.1.0"
authors = ["MattTeixeira"]
edition = "2021"
build = "build.rs"
description = "Desktop app that divides income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.Matthew-Teixeira.income_app"